Fixed bottom logo alignment

--- a/css/main.css
+++ b/css/main.css
@@ -421,6 +421,10 @@ form {
     position: static;
   }
 
+  .bottom-nav div a {
+    float: none;
+  }
+
 }
 
 @media only screen and (min-width: 120em) {
